fixing special char in URL

--- a/communication_norms.adoc
+++ b/communication_norms.adoc
@@ -170,7 +170,7 @@ Such works are an excellent resource for newcomers orienting themselves to the p
 Communicating your project's _non-goals_ is equally important.
 Due to the vibrant nature of open source projects, it is only natural that someone will find a use for a project that the project's creators never intended and will wish to extend the project's capabilities to target that specific use case.
 If the project maintainers do not intend for the project to have a wider focus than what is already offered, letting these would-be contributors know this in advance will save everyone time and disappointment.
-In the era of "https://en.wikipedia.org/wiki/Fork_(software_development)[easy forking]," it is relatively easy for those who would use some parts of the project but not others to develop and maintain a code base that better matches their own needs—all without asking the maintainers of the original project to deviate from their intended vision and the project scope they've set.
+In this era of https://en.wikipedia.org/wiki/Fork_%28software_development%29[easy forking], it is relatively easy for those who would use some parts of the project but not others to develop and maintain a code base that better matches their own needs—all without asking the maintainers of the original project to deviate from their intended vision and the project scope they've set.
 
 Documenting non-goals is also particularly important for commercially focused projects, where a contributor's desire to create a feature as open source may be in conflict with vendor goals for creating proprietary features.
 Contributors may still choose to create that feature as open source, but they should know from the start that upstream maintainers do not intend to include their work as part of the project's code base.
