Fixing BIG oversight of not including metrics chapter My brain got stuck a few weeks ago when doing test builds without this content, and even though it's been ready for the release I didn't get it on my lists-for-launch. https://github.com/theopensourceway/guidebook/issues/34 I am going to brown-bag release this (update under the same release number), and I haven't tagged the repo for 1.99 yet, so this can slip right in from a build and release perspective. I'll also go make a bit of noise that this happened, here are ten more pages on community metrics and a quick release update as per the open source way!

--- a/preview-1.99-book.adoc
+++ b/preview-1.99-book.adoc
@@ -23,6 +23,8 @@ include::why_people_participate.adoc[]
 
 include::community_governance.adoc[]
 
+include::developing_a_metrics_plan.adoc[]
+
 include::community_manager_self_care.adoc[]
 
 :leveloffset: -1
