--- a/why_people_participate.adoc
+++ b/why_people_participate.adoc
@@ -50,8 +50,8 @@ A final motivator in this category is what researchers call "own-use value" but 
 
 As noted earlier, motivations for many things are multi-faceted and contributing to open source software is no exception. However, here are three takeaways that you may find useful.
 
-*Don't expect non-extrinsic motivators to carry too much of the load.* Many do contribute to open source projects for idealistic or altruistic reasons. But those are usually not the sole motivators and may not even be an important ones. Especially in the case of projects that have commercial backing, pay, and other professional working benefits matter a great deal.
+*Don't expect non-extrinsic motivators to carry too much of the load.* Many do contribute to open source projects for idealistic or altruistic reasons. But those are usually not the sole motivators and may not even be important ones. Especially in the case of projects that have commercial backing, pay, and other professional working benefits matter a great deal.
 
 *Ampily non-extrinsic motivators such as learning and peer recognition.* While not replacements for more direct benefits, the opportunity to be recognized by peers and to work in new technology areas are motivators. Organizations should consider peer recognition programs and explicitly encourage learning in order to make the best use of these motivational factors.
 
-*Motivators can be counter-productive when over-rotated.* Precisely because motivations are multi-faceted, don't place too big a bet on any single one. We already discussed the limitations of ideology and altruism. However, also consider something like "scratch your own itch" for example. If that's the _only_ someone contributes, they'll tend to wander in and out of a project as their own specific needs merit. That may be a perfectly fine outcome, but it's not a path to developing a long-term maintainer.
+*Motivators can be counter-productive when over-rotated.* Precisely because motivations are multi-faceted, don't place too big a bet on any single one. We already discussed the limitations of ideology and altruism. However, also consider something like "scratch your own itch" for example. If that's the _only_ reason someone contributes, they'll tend to wander in and out of a project as their own specific needs merit. That may be a perfectly fine outcome, but it's not a path to developing a long-term maintainer.
